--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,36 @@ th {
    color: #fff;
 }
 
+.radio-group {
+   display: flex;
+   justify-content: center;
+   margin-top: 10px;
+}
+.radio-group label {
+   display: flex;
+   align-items: center;
+   margin-right: 20px;
+   cursor: pointer;
+}
+.radio-group input[type="radio"] {
+   opacity: 0;
+   position: absolute;
+}
+
+.radio-group span {
+   margin-left: 5px;
+   font-size: 16px;
+}
+
+.radio-group input[type="radio"]:checked+span {
+   font-weight: bold;
+   color: #555;
+}
+
+.radio-group label:hover {
+   color: #555;
+}
+
 @keyframes fadeIn {
    from {
       opacity: 0;
